<resources>
    <string name="app_name">Happy Birthday</string>
    <string name="from_ritik">-From Ritik</string>
    <string name="happy_birthday_harnoor">Happy Birthday!, Harnoor</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="may_god_give_you_life_more_than_sun_and_stars">May God Give you life more than sun and stars.</string>
    <string name="by_your_dear_one">-by your dear one</string>
    <string name="you_will_get_the_most_beautiful_life_that_s_my_blessings">You will get the most beautiful life, that\'s my blessings.</string>
    <string name="i_hope_god_fulfil_all_your_wishes">I hope God fulfil all your wishes.</string>
    <string name="may_this_day_comes_again_and_again">May this day comes again and again.</string>
    <string name="todo">TODO</string>
</resources>