<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/androidparty"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-thin"
        android:lineSpacingExtra="8sp"
        android:text="@string/may_god_give_you_life_more_than_sun_and_stars"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/happy_birthday"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/CardView"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/by_your_dear_one"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-thin"
        android:lineSpacingExtra="8sp"
        android:text="@string/you_will_get_the_most_beautiful_life_that_s_my_blessings"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="436dp"
        android:fontFamily="sans-serif-thin"
        android:lineSpacingExtra="8sp"
        android:text="@string/i_hope_god_fulfil_all_your_wishes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-thin"
        android:lineSpacingExtra="8sp"
        android:text="@string/may_this_day_comes_again_and_again"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E91E63"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</androidx.constraintlayout.widget.ConstraintLayout>